force-app/main/default/objects/refedge__Reference_Basic_Information__c/fields/refedge__Account_Level_RUL__c.field-meta.xml
<CustomField>
    <fullName>refedge__Account_Level_RUL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this flag is set, any RUL settings on Contacts related to this Account are ignored</description>
    <inlineHelpText>When selected only the Account&apos;s Completed Uses per Time Period are considered when determining the Limit Reached.</inlineHelpText>
    <label>Ignore Contact Use Limits</label>
    <type>Checkbox</type>
</CustomField>