force-app/main/default/objects/refedge__Reference_Basic_Information__c/fields/refedge__ACV_Influenced__c.field-meta.xml
<CustomField>
    <fullName>refedge__ACV_Influenced__c</fullName>
    <inlineHelpText>ACV (Annual Contract Value) Influenced indicates the total value of closed:won Opportunities for which the Account/Contact was used as a reference in the current year.</inlineHelpText>
    <label>ACV Influenced</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>