force-app/main/default/objects/refedge__Reference_Basic_Information__c/fields/refedge__Att_Ref_Last_Update_By__c.field-meta.xml
<CustomField>
    <fullName>refedge__Att_Ref_Last_Update_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Att Ref Last Update By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reference_Profiles1</relationshipName>
    <type>Lookup</type>
</CustomField>