force-app/main/default/objects/refedge__Reference_Basic_Information__c/fields/refedge__Attribute_Ids__c.field-meta.xml
<CustomField>
    <fullName>refedge__Attribute_Ids__c</fullName>
    <label>Attribute Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>