force-app/main/default/objects/refedge__Reference_Basic_Information__c/fields/refedge__Generic_Account__c.field-meta.xml
<CustomField>
    <fullName>refedge__Generic_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generic Account</label>
    <type>Checkbox</type>
</CustomField>