force-app/main/default/objects/refedge__Reference_Basic_Information__c/fields/refedge__Inherit_Attributes_from_All_Accounts__c.field-meta.xml
<CustomField>
    <fullName>refedge__Inherit_Attributes_from_All_Accounts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inherit Attributes from All Accounts</label>
    <type>Checkbox</type>
</CustomField>