force-app/main/default/objects/refedge__Reference_Basic_Information__c/fields/refedge__Inherit_Attributes_from_Primary_Account__c.field-meta.xml
<CustomField>
    <fullName>refedge__Inherit_Attributes_from_Primary_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inherit Attributes from Primary Account</label>
    <type>Checkbox</type>
</CustomField>