force-app/main/default/objects/refedge__Reference_Basic_Information__c/fields/refedge__Joined_Reference_Program__c.field-meta.xml
<CustomField>
    <fullName>refedge__Joined_Reference_Program__c</fullName>
    <label>Joined Reference Program</label>
    <type>Date</type>
</CustomField>