force-app/main/default/objects/refedge__Reference_Basic_Information__c/fields/refedge__Last_Refresh_By__c.field-meta.xml
<CustomField>
    <fullName>refedge__Last_Refresh_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Update By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reference_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>