force-app/main/default/objects/refedge__Reference_Basic_Information__c/fields/refedge__Last_Refresh_Sent__c.field-meta.xml
<CustomField>
    <fullName>refedge__Last_Refresh_Sent__c</fullName>
    <label>Last Update Sent</label>
    <type>DateTime</type>
</CustomField>