force-app/main/default/objects/refedge__Reference_Basic_Information__c/fields/refedge__Managed_Reference_Account__c.field-meta.xml
<CustomField>
    <fullName>refedge__Managed_Reference_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Reference requests for this Account will always be routed to the Customer Reference Team.</inlineHelpText>
    <label>Managed Reference Account</label>
    <type>Checkbox</type>
</CustomField>