force-app/main/default/objects/refedge__Reference_Basic_Information__c/fields/refedge__Primary_Reference__c.field-meta.xml
<CustomField>
    <fullName>refedge__Primary_Reference__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that this Contact is the Primary Reference for the associated account. Cannot be checked for Account Reference Profiles.</inlineHelpText>
    <label>Primary Reference</label>
    <type>Checkbox</type>
</CustomField>