force-app/main/default/objects/refedge__Reference_Basic_Information__c/fields/refedge__Referenceability__c.field-meta.xml
<CustomField>
    <fullName>refedge__Referenceability__c</fullName>
    <inlineHelpText>The types reference activities this Account or Contact has approved.</inlineHelpText>
    <label>Referenceability</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>