force-app/main/default/objects/refedge__Reference_Basic_Information__c/fields/refedge__Refresh_Ageing__c.field-meta.xml
<CustomField>
    <fullName>refedge__Refresh_Ageing__c</fullName>
    <formula>TODAY() - DateValue( refedge__Last_Refresh_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Update Aging</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>