force-app/main/default/objects/refedge__Reference_Basic_Information__c/fields/refedge__Roll_up_Referenceability_to_All_Accounts__c.field-meta.xml
<CustomField>
    <fullName>refedge__Roll_up_Referenceability_to_All_Accounts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Roll up Referenceability to All Accounts</label>
    <type>Checkbox</type>
</CustomField>