force-app/main/default/objects/refedge__Reference_Basic_Information__c/fields/refedge__Roll_up_Referenceability_to_Primary_Acc__c.field-meta.xml
<CustomField>
    <fullName>refedge__Roll_up_Referenceability_to_Primary_Acc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Roll up Ref to Primary Account</label>
    <type>Checkbox</type>
</CustomField>