force-app/main/default/objects/refedge__Reference_Basic_Information__c/fields/refedge__RUL_Limit_Reached__c.field-meta.xml
<CustomField>
    <fullName>refedge__RUL_Limit_Reached__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The Limit Reached checkbox is selected when the Uses per Time Period are exhausted.</inlineHelpText>
    <label>Limit Reached</label>
    <type>Checkbox</type>
</CustomField>