force-app/main/default/objects/refedge__Reference_Basic_Information__c/recordTypes/refedge__Account.recordType-meta.xml
<RecordType>
    <fullName>refedge__Account</fullName>
    <active>true</active>
    <label>Account</label>
</RecordType>