force-app/main/default/objects/refedge__Reference_Basic_Information__c/recordTypes/refedge__Contact.recordType-meta.xml
<RecordType>
    <fullName>refedge__Contact</fullName>
    <active>true</active>
    <label>Contact</label>
</RecordType>